apps/landingpage: fix positioning of hero image floating noti on mobile

--- a/adhocracy-plus/assets/scss/components/landing_page.scss
+++ b/adhocracy-plus/assets/scss/components/landing_page.scss
@@ -147,7 +147,7 @@ $faq-bg: #f5f5f5;
         .lp-floating-noti {
             &:first-of-type {
                 bottom: -5%;
-                left: 30%;
+                left: 50%;
             }
 
             &:last-of-type {
